--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -79,7 +79,7 @@
       <input type="text" id="discordID" placeholder="1234567890">
 
       <label>Private Link:</label>
-      <input type="text" id="vipLink" placeholder="https://www.roblox.com/games/126884695634066/Grow-a-Garden?privateServerLinkCode=28062830835932767537940880155560">
+      <input type="text" id="VipLink" placeholder="https://www.roblox.com/games/126884695634066/Grow-a-Garden?privateServerLinkCode=28062830835932767537940880155560">
 
       <div class="donate-section">
         <div class="credits">
