--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -58,7 +58,7 @@
         Eggs
       </button>
 
-      <button onclick="switchTab('Event')" aria-label="Event tab">
+      <!-- <button onclick="switchTab('Event')" aria-label="Event tab">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-trophy-icon lucide-trophy">
           <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/>
           <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"/>
@@ -68,7 +68,7 @@
           <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"/>
         </svg>
         Event
-      </button>
+      </button> -->
     </div>
 
     <div id="main" class="tab active">
@@ -94,30 +94,29 @@
     </div>
 
 
-    <div id="Seeds" class="tab">  
-      <div class="rewards-grid">
+<div id="Seeds" class="tab">  
+  <div class="rewards-grid">
 
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/CarrotProduce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Carrot</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="CarrotSeed">Claim</label>
-  </div>
-</div>
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/CarrotProduce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Carrot</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="CarrotSeed">Claim</label>
+      </div>
+    </div>
 
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Strawberry.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Strawberry</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="StrawberrySeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Strawberry.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Strawberry</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="StrawberrySeed">Claim</label>
+      </div>
+    </div>
+    <div class="reward-box">
   <div class="reward-header">
     <img src="../../images/Seeds/Blueberry.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
     <span>Blueberry</span>
@@ -127,159 +126,200 @@
   </div>
 </div>
 
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Tomato.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Tomato</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="TomatoSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Cauliflower_Produce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Cauliflower</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="CauliflowerSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Watermelonfruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Watermelon</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="WatermelonSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/RafflesiaIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Rafflesia</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="RafflesiaSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Green_apple_produce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Green Apple</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="GreenAppleSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Avocadocrop2.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Avocado</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="AvocadoSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/BananaPic.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Banana</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="BananaSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/PineappleFruitIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Pineapple</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="PineappleSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Kiwi_(Plant).webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Kiwi</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="KiwiSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/BellPepper1.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Bell Pepper</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="BellPepperSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/PricklyPear.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Prickly Pear</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="PricklyPearSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/LoquatProduce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Loquat</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="LoquatSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/FeijoaIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Feijoa</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="FeijoaSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/Pitcherproduce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Pitcher Plant</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="PitcherPlant">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Seeds/SugarAppleIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Sugar Apple</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="SugarApple">Claim</label>
-  </div>
-</div>
-
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/OrangeTulip.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Orange Tulip</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="OrangeTulip">Claim</label>
       </div>
     </div>
 
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Tomato.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Tomato</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="TomatoSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Daffodilfruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Daffodll</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="DaffodllSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Watermelonfruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Watermelon</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="WatermelonSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Pumpkincropp.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Pumpkin</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="PumpkinSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Applefruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Apple</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="AppleSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Bamboofruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Bamboo</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="BambooSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Coconutfruiticon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Coconut</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="CoconutSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Cactus_fruit_icon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Cactus</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="CactusSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Dragonfruitthumb.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Dragon Fruit</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="DragonFruitSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/MangoFruitIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Mango</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="MangoSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Grapwes.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Grape</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="GrapeSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/MushroomCropsPic.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Mushroom</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="MushroomSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/PepperCropsPic.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Pepper</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="PepperSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/CacaoIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Cacao</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="CacaoSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/BeanstalkIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Beanstalk</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="BeanstalkSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Ember_Lily_Produce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Ember Lily</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="EmberLily">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/SugarAppleIcon.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Sugar Apple</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="SugarApple">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Burning_Bud.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
+        <span>Burning Bud</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="BurningBud">Claim</label>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- end of seeds -->
     <div id="Gears" class="tab">  
       <div class="rewards-grid">
 
@@ -414,6 +454,7 @@
     </div>
   </div>
 </div>
+<!-- end of gear -->
 
     <div id="Eggs" class="tab">  
       <div class="rewards-grid">
@@ -500,102 +541,12 @@
       </div>
     </div>
 
-    <div id="Event" class="tab">  
-      <div class="rewards-grid">
-
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/Summerseedpack.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Summer Seed Pack</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="SummerSeedPack">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/DelphiniumProduce.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Delphinium</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="DelphiniumSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/LilyOfTheValleyCrop.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Lily Of The Valley</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="LilyoftheValleySeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/TravelersFruitPlant.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Traveler's Fruit</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="TravelersFruitSeed">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/Mutationsprayburnt.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Mutation Spray Burnt</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="BurntMutationSpray">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/OasisCrate.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Oasis Crate</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="OasisCrate">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/OasisEgg.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Oasis Egg</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="OasisEgg">Claim</label>
-  </div>
-</div>
-
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Summer/HamsterPet.webp" style="width: 20px; height: 20px; margin-right: 3px; vertical-align: middle;">
-    <span>Hamster</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="Hamster">Claim</label>
-  </div>
-</div>
-
-        
-        
-      </div>
-    </div>
-
-
 
 
     <hr>
     <div class="footer">
-      <button onclick="ahkButtonClick('Start')">Start (F1)</button>
-      <button onclick="ahkButtonClick('Stop')">Stop (F2)</button>
+      <button onclick="ahk.ButtonClick.Func('Start')">Start (F1)</button>
+      <button onclick="ahk.ButtonClick.Func('Stop')">Stop (F2)</button>
       <button onclick="onSaveClick(this)">Save All</button>
     </div>
   </div>
