--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -566,7 +566,7 @@
     <span>Lightning Rod</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="LightingRod">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="LightingRod">Claim</label>
   </div>
 </div>
 
@@ -656,7 +656,7 @@
     <span>Mutation Spray Chilled</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="MutationSprayChilled">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="MutationSprayChilled">Claim</label>
   </div>
 </div>
 
@@ -666,7 +666,7 @@
     <span>Mutation Spray Shocked</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="MutationSprayShocked">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="MutationSprayShocked">Claim</label>
   </div>
 </div>
 
@@ -676,7 +676,7 @@
     <span>Anti Bee Egg</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="AntiBeeEgg">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="AntiBeeEgg">Claim</label>
   </div>
 </div>
 
