--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -28,46 +28,22 @@
       </button>
 
       <button onclick="switchTab('Seeds')" aria-label="Seeds tab">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-gift-icon lucide-gift">
-          <rect x="3" y="8" width="18" height="4" rx="1"/>
-          <path d="M12 8v13"/>
-          <path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"/>
-          <path d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"/>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-apple-icon lucide-apple"><path d="M12 20.94c1.5 0 2.75 1.06 4 1.06 3 0 6-8 6-12.22A4.91 4.91 0 0 0 17 5c-2.22 0-4 1.44-5 2-1-.56-2.78-2-5-2a4.9 4.9 0 0 0-5 4.78C2 14 5 22 8 22c1.25 0 2.5-1.06 4-1.06Z"/><path d="M10 2c1 .5 2 2 2 5"/></svg>
         Seeds
       </button>
 
       <button onclick="switchTab('Gears')" aria-label="Gears tab">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-arrow-up-down-icon lucide-arrow-up-down">
-          <path d="m21 16-4 4-4-4"/>
-          <path d="M17 20V4"/>
-          <path d="m3 8 4-4 4 4"/>
-          <path d="M7 4v16"/>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-settings2-icon lucide-settings-2"><path d="M14 17H5"/><path d="M19 7h-9"/><circle cx="17" cy="17" r="3"/><circle cx="7" cy="7" r="3"/></svg>
         Gears
       </button>
 
       <button onclick="switchTab('Eggs')" aria-label="Eggs tab">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-bot-icon lucide-bot">
-          <path d="M12 8V4H8"/>
-          <rect width="16" height="12" x="4" y="8" rx="2"/>
-          <path d="M2 14h2"/>
-          <path d="M20 14h2"/>
-          <path d="M15 13v2"/>
-          <path d="M9 13v2"/>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-egg-icon lucide-egg"><path d="M12 2C8 2 4 8 4 14a8 8 0 0 0 16 0c0-6-4-12-8-12"/></svg>
         Eggs
       </button>
 
       <button onclick="switchTab('Crafting')" aria-label="Crafting tab">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-bot-icon lucide-bot">
-          <path d="M12 8V4H8"/>
-          <rect width="16" height="12" x="4" y="8" rx="2"/>
-          <path d="M2 14h2"/>
-          <path d="M20 14h2"/>
-          <path d="M15 13v2"/>
-          <path d="M9 13v2"/>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil-icon lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/></svg>
         Crafting
       </button>
 
@@ -99,7 +75,7 @@
           <span>Macro By: _epic. </span>
             <span id="random-message"></span>
             <div></div>
-            <img class="donate-btn" onclick="ahk.global.run('https://www.roblox.com/games/17723449397/Bee-Swarm-Vicious-Hop#!/store')" alt="Me">
+            <img class="donate-btn" onclick="ahk.global.run('https://www.roblox.com/games/3780570380/Donation-area#!/store')" alt="Donate Here!">
         </div>
       </div>
     </div>
@@ -586,7 +562,7 @@
     <span>Tropical Mist Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="TropicalMistSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="TropicalMistSprinkler">Claim</label>
   </div>
 </div>
 
@@ -596,7 +572,7 @@
     <span>Berry Blusher Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="BerryBlusherSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="BerryBlusherSprinkler">Claim</label>
   </div>
 </div>
 
@@ -606,7 +582,7 @@
     <span>Spice Spritzer Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="SpiceSpirtzerSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="SpiceSpirtzerSprinkler">Claim</label>
   </div>
 </div>
 
@@ -616,7 +592,7 @@
     <span>Sweet Soaker Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="SweetSoakerSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="SweetSoakerSprinkler">Claim</label>
   </div>
 </div>
 
@@ -626,7 +602,7 @@
     <span>Flower Froster Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="FlowerFrosterSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="FlowerFrosterSprinkler">Claim</label>
   </div>
 </div>
 
@@ -636,7 +612,7 @@
     <span>Stalk Sprout Sprinkler</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="StalkSproutSprinkler">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="StalkSproutSprinkler">Claim</label>
   </div>
 </div>
 
@@ -646,7 +622,7 @@
     <span>Mutation Spray Choc</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="MutationSprayChoc">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="MutationSprayChoc">Claim</label>
   </div>
 </div>
 
@@ -686,7 +662,7 @@
     <span>Pack Bee</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" disabled name="GearCrafter" id="PackBee">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="PackBee">Claim</label>
   </div>
 </div>
 
