--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -74,8 +74,10 @@
         <div class="credits">
           <span>Macro By: _epic. </span>
             <span id="random-message"></span>
-            <div></div>
-            <img class="donate-btn" onclick="ahk.global.run('https://www.roblox.com/games/3780570380/Donation-area#!/store')" alt="Donate Here!">
+            <div>
+              <img class="discord-btn" onclick="ahk.global.run('https://discord.gg/Vc465gUXHk')" alt="Discord!" src="https://pngimg.com/uploads/discord/discord_PNG3.png">
+              <img class="donate-btn" onclick="ahk.global.run('https://www.roblox.com/games/3780570380/Donation-area#!/store')" alt="Donate Here!">
+            </div>
         </div>
       </div>
     </div>
@@ -130,6 +132,16 @@
       </div>
       <div class="reward-options">
         <label><input type="checkbox" id="TomatoSeed">Claim</label>
+      </div>
+    </div>
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Corn.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+        <span>Corn</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="CornSeed">Claim</label>
       </div>
     </div>
 
