--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -137,7 +137,7 @@
 
     <div class="reward-box">
       <div class="reward-header">
-        <img src="../../images/Seeds/Corn.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+        <img src="../../images/Seeds/CornTreePic.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
         <span>Corn</span>
       </div>
       <div class="reward-options">
@@ -315,6 +315,17 @@
       </div>
     </div>
 
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <img src="../../images/Seeds/Giant_pinecone.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+        <span>Gaint Pinecone Seed</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="GaintPineconeSeed">Claim</label>
+      </div>
+    </div>
+
   </div>
 </div>
 
@@ -369,6 +380,26 @@
   </div>
   <div class="reward-options">
     <label><input type="checkbox" id="AdvancedSprinkler">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Gears/MediumToy.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Medium Toy</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="MediumToy">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Gears/MediumTreat.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Medium Treat</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="MediumTreat">Claim</label>
   </div>
 </div>
 
@@ -451,6 +482,19 @@
     <label><input type="checkbox" id="FriendshipPot">Claim</label>
       </div>
     </div>
+
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Gears/LevelUpLollipop.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Levelup Lollipop</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="LevelupLollipop">Claim</label>
+      </div>
+</div>
+
+
   </div>
 </div>
 <!-- end of gear -->
@@ -511,7 +555,7 @@
       </div>
     </div>
 
-<div class="reward-box">
+<!-- <div class="reward-box">
   <div class="reward-header">
     <img src="../../images/Eggs/BeeEgg.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
     <span>Bee Egg</span>
@@ -519,7 +563,7 @@
   <div class="reward-options">
     <label><input type="checkbox" id="BeeEgg">Claim</label>
   </div>
-</div>
+</div> -->
 
     <div class="reward-box">
       <div class="reward-header">
@@ -674,7 +718,7 @@
     <span>Pack Bee</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="GearCrafter" id="PackBee">Claim</label>
+    <label><input type="radio" name="GearCrafter" id="PackBee" disabled>Claim</label>
   </div>
 </div>
 
