--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -319,10 +319,10 @@
     <div class="reward-box">
       <div class="reward-header">
         <img src="../../images/Seeds/Giant_pinecone.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-        <span>Gaint Pinecone Seed</span>
+        <span>Giant Pinecone Seed</span>
       </div>
       <div class="reward-options">
-        <label><input type="checkbox" id="GaintPineconeSeed">Claim</label>
+        <label><input type="checkbox" id="GiantPineconeSeed">Claim</label>
       </div>
     </div>
 
@@ -714,22 +714,93 @@
 
 <div class="reward-box">
   <div class="reward-header">
+    <img src="../../images/CraftingGears/SmallToy.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Small Toy</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="GearCrafter" id="SmallToy">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/CraftingGears/Small_Treat.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Small Treat</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="GearCrafter" id="SmallTreat">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
     <img src="../../images/CraftingGears/PackBee.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
     <span>Pack Bee</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="GearCrafter" id="PackBee" disabled>Claim</label>
+    <label><input type="radio" name="GearCrafter" id="PackBee">Claim</label>
   </div>
 </div>
 
   </div>
 
 
-      <div class="rewards-grid">
-      <h3>Seed Crafting</h3>
-        
+  <hr>
+  <h3>Seed Crafting</h3>
+  <div class="rewards-grid">
+    
+<div class="reward-box">
+  <div class="reward-header">
+    <span>Craft Seeds?</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="SeedCrafting">Enable</label>
+  </div>
+</div>
 
-      </div>
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/CraftingSeeds/HorsetailSeed.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Horsetail</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="SeedCrafter" id="Horsetail">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/CraftingSeeds/LingonberrySeed.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Lingonberry</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="SeedCrafter" id="Lingonberry">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/CraftingSeeds/AmberSpineSeed.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Amber Spine</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="SeedCrafter" id="AmberSpine">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/CraftingSeeds/GrandVolcaniaSeed.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Grand Volcania</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="SeedCrafter" id="GrandVolcania">Claim</label>
+  </div>
+</div>
+
+
+
+  </div>
 
 
 
@@ -746,11 +817,100 @@
   </div>
   <div class="reward-options">
     <label><input type="checkbox" id="DinoEvent">Claim</label>
+    <label><input type="checkbox" id="dnaMaxed">24m cooldown</label>
+  </div>
+</div>
+
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/theGoat.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Traveling Merchant</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="TravelingMerchant">Claim</label>
+  </div>
+</div>
+
+</div>
+
+
+  <div class="rewards-grid">
+
+    <div class="reward-box">
+      <div class="reward-header">
+        <span>Craft Event Gears?</span>
+      </div>
+      <div class="reward-options">
+        <label><input type="checkbox" id="EventCrafting">Enable</label>
+      </div>
+    </div>
+
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/MutationSprayAmber.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Mutation Spray Amber</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="MutationSprayAmber">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/AncientSeedPack1.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Ancient Seed Pack</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="AncientSeedPack">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/DinoCrate.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Dino Crate</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="DinoCrate">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/ArchaelogistCrate.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Archaelogist Crate</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="ArchaelogistCrate">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/Dinosauregg.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Dinosaur Egg</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="DinosaurEgg">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/PrimalEgg.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Primal Egg</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="radio" name="EventCrafting" id="PrimalEgg">Claim</label>
   </div>
 </div>
 
 
   </div>
+
+
 </div>
 
 
